--- a/templates/index.html
+++ b/templates/index.html
@@ -1,86 +1,83 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <script src="{{ url_for('static', filename='index.js') }}"></script>
+    <a href="sdfsfdsdf"></a>
     <!--<script> src="/static/index.js"</script>-->
 
     <title>SocketIO</title>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <span class="navbar-brand ">Hi user_name</span>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav mr-auto">
-
-        </div>
-
-
-        <form class="form-inline mt-2 mt-md-0" action="/logout" method="POST">
-
-            <button class="btn btn-outline-info my-2 my-sm-0 " type="submit">Log Out</button>
-        </form>
-    </div>
-</nav>
-
-
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron text-center">
-    <div class="container">
-        <h1 class="jumbotron-heading">Welcome, enter a username</h1>
-        <br>
-        <br>
-
-        <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <form action="/channel" method="POST">
-                    <div class="form-group">
-
-                        <input type="text" class="form-control" name="user_name" placeholder="Username">
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <span class="navbar-brand ">Welcome</span>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav mr-auto">
 
             </div>
+
         </div>
+    </nav>
 
 
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">Welcome, enter a username</h1>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-4 offset-md-4">
+                    <form action="/channel" id="formName" method="POST">
+                        <div class="form-group">
+
+                            <input type="text" id="userName" class="form-control" name="user_name" placeholder="Username">
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+
+                </div>
+            </div>
+
+        </div>
     </div>
-</div>
 
-<!--Main text entry-->
-<div class="container">
-
-    <div class="row">
-
-
-    </div>
-</div>
-
-
-<footer class="footer">
+    <!--Main text entry-->
     <div class="container">
-        <span class="text-muted">By Oscar Morales</span>
-    </div>
-</footer>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        <div class="row">
+
+
+        </div>
+    </div>
+
+
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted">By Oscar Morales</span>
+        </div>
+    </footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
