--- a/templates/channel.html
+++ b/templates/channel.html
@@ -23,7 +23,9 @@
             <h1 class="col-md-4 offset-md-4">Current Messages</h1>
             <div class="col-md-4 offset-md-4">
                 <ul id="messages">
-
+                    {% for item in stored_messages %}
+                    <li>{{item}}</a></li>
+                    {% endfor %}
 
                 </ul>
             </div>
