--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,8 @@
                     <form action="/channel" id="formName" method="POST">
                         <div class="form-group">
 
-                            <input type="text" id="userName" class="form-control" name="user_name" placeholder="Username">
+                            <input type="text" id="userName" class="form-control" name="user_name"
+                                placeholder="Username" required autofocus>
                         </div>
 
                         <button type="submit" class="btn btn-primary">Submit</button>
