--- a/templates/channel.html
+++ b/templates/channel.html
@@ -3,7 +3,16 @@
 
 
 {% block extra %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<!-- Handle Bars Template System -->
+<script id="selectionTemplate" type="text/x-handlebars-template">
+    <div>
+        <input type="radio" class="currentUsers" data-user="{% raw -%} {{ content }} {%- endraw %}" name="allUsers" id="{% raw -%}{{ content }}{%- endraw %}">
+        <label>{% raw -%} {{ content }} {%- endraw %}</label>
+    </div>
+</script>
+
 <script type="text/javascript" src="{{ url_for('static', filename='channel.js') }}"></script>
 {% endblock %}
 
@@ -46,19 +55,19 @@
                 </form>
 
             </div>
-            <div class="col">
+            <div class="col" id="channelUsers">
                 <h5>Select Recipient</h5>
                 <div>
-                    <input type="radio" id="all" name="allUsers" value="all" checked="checked">
-                    <label for="dewey">All Users</label>
+                    <input type="radio" name="allUsers" class="currentUsers" data-user="all" checked="checked">
+                    <label>All Users</label>
                 </div>
 
                 {% if users is not none %}
 
                 {% for user in users %}
                 <div>
-                    <input type="radio" id="{{user}}" name="allUsers" value="{{user}}">
-                    <label>{{user}}</label>    
+                    <input type="radio" class="currentUsers" data-user="{{user}}" name="allUsers">
+                    <label>{{user}}</label>
                 </div>
 
                 {% endfor %}
@@ -71,11 +80,6 @@
 
             </div>
         </div>
-
-
-
-
-
 
 
     </div>
