--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
     <script src="{{ url_for('static', filename='index.js') }}"></script>
     <a href="sdfsfdsdf"></a>
     <!--<script> src="/static/index.js"</script>-->
+    <style>
+        .navbar-dark .navbar-brand {
+            color: #17a2b8;
+        }
+    </style>
 
     <title>SocketIO</title>
 </head>
