Minor code refactoring.

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -3,7 +3,7 @@
 
 
 {% block extra %}
-<style>https://www.youtube.com/watch?v=2WjBqxuZbO0
+<style>
 
     ::-webkit-scrollbar {
         -webkit-appearance: none;
@@ -22,9 +22,6 @@
         background-color: #343a40;
         color: #17a2b8;
         border-style: solid;
-        /* border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px; */
         border-color: #17a2b8;
         ;
     }
