--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
 <script id="alertTemplate" type="text/x-handlebars-template">
     <div class="alert alert-danger" role="alert">
-        Room already exists, try again.
+        Channel already exists, try again.
     </div>
 
 </script>
