Erase content from input field after user has submmited a message.(JS code change)

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -82,7 +82,7 @@
             <form id="messageForm" method="POST">
                 <div class="form-group">
 
-                    <input type="text" autofocus class="form-control" id="formInput" placeholder="Type a message...">
+                    <input type="text" autofocus class="form-control" id="formInput" placeholder="Type a message..." required>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Send</button>
