--- a/templates/channel.html
+++ b/templates/channel.html
@@ -26,6 +26,7 @@
         ;
     }
 
+
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
@@ -82,7 +83,8 @@
             <form id="messageForm" method="POST">
                 <div class="form-group">
 
-                    <input type="text" autofocus class="form-control" id="formInput" placeholder="Type a message..." required>
+                    <input type="text" autofocus class="form-control" id="formInput" placeholder="Type a message..."
+                           required>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Send</button>
