--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
 <script id="alertTemplate" type="text/x-handlebars-template">
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-success" role="alert">
         Channel already exists, try again.
     </div>
 
