--- a/templates/channel.html
+++ b/templates/channel.html
@@ -4,15 +4,16 @@
 
 {% block extra %}
 <style>
-
     ::-webkit-scrollbar {
         -webkit-appearance: none;
         width: 7px;
     }
 
     ::-webkit-scrollbar-thumb {
-        border-radius: .5em;;
-        background-color:#666;;
+        border-radius: .5em;
+        ;
+        background-color: #666;
+        ;
     }
 
     nav ul {
@@ -25,8 +26,6 @@
         border-color: #17a2b8;
         ;
     }
-
-
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
@@ -47,6 +46,10 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <span class="navbar-brand "> </span>
     <span class="navbar-brand " style="width: 100%;text-align: center"> Channel Name: {{channel_name}} </span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav mr-auto">
         </div>
@@ -84,7 +87,7 @@
                 <div class="form-group">
 
                     <input type="text" autofocus class="form-control" id="formInput" placeholder="Type a message..."
-                           required>
+                        required>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Send</button>
